<resources>
    <string name="app_name">Tubes</string>
    <string name="tittle">School Management System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnSign_Up">Sign Up</string>
    <string name="btnSign_In">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="murid">Murid</string>
    <string name="guru">Guru</string>
    <string name="geolocation">Geolocation</string>
    <string name="about_us">About Us</string>
    <string name="menu">Menu</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoia2kwNjExMjAwMCIsImEiOiJja2Zudm5teTgwNDNqMnNtcjBpYTk1dHRqIn0.FMhZ_i1tnRnezTqUGw8NcQ</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="m_str">Streets</string>
    <string name="m_dark">Dark</string>
    <string name="m_light">Light</string>
    <string name="m_out">Outdoors</string>
    <string name="m_sat">Satellite</string>
    <string name="m_sats">Sattellite Streets</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_main">List Of Guru</string>
    <string name="full_name">Input full name</string>
    <string name="umur">Input age</string>
    <string name="number">Input number</string>
    <string name="add">Add</string>
    <string name="addE">Add Guru</string>
    <string name="update">Update</string>
    <string name="updateE">Update Guru</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search by name</string>
    <string name="nama">Nama</string>
</resources>